--- a/korau-opus/kproject.yml
+++ b/korau-opus/kproject.yml
@@ -2,5 +2,5 @@ name: "korau-opus"
 plugins:
   #- serialization
 dependencies:
-  - "maven::common::com.soywiz.korlibs.korge2:korge"
-
+- "maven::common::com.soywiz.korlibs.korge2:korge"
+#- "maven::jvm::com.soywiz.org.concertus:concentus-java:0.0.1-SNAPSHOT"
